--- a/ShopApp/ShopsClient/Views/ProductWindow.axaml
+++ b/ShopApp/ShopsClient/Views/ProductWindow.axaml
@@ -7,7 +7,7 @@
         Title="ProductWindow"
 		xmlns:vm="using:ShopsClient.ViewModels"
 		MinHeight="350" MinWidth="350"
-		MaxHeight="350" MaxWidth="350"
+
 		SizeToContent="Height">
 	<Design.DataContext>
 		<vm:CustomerViewModel/>
@@ -17,7 +17,7 @@
 		<StyleInclude Source="/ShopsStyle.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
+	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
 		<Label Grid.Row="0" Grid.Column="0">Штрих код</Label>
 		<Label Grid.Row="1" Grid.Column="0">Название</Label>
 		<Label Grid.Row="2" Grid.Column="0">Id группы продукта</Label>
